--- a/ui/package.json
+++ b/ui/package.json
@@ -13,20 +13,22 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/jetbrains-mono": "^5.2.8",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
     "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-form": "^1.27.7",
+    "@tanstack/react-devtools": "^0.9.2",
+    "@tanstack/react-form-devtools": "^0.2.12",
+    "@tanstack/react-form-start": "^1.27.7",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
-    "@tanstack/zod-form-adapter": "^0.42.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.563.0",
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
