--- a/ui/biome.jsonc
+++ b/ui/biome.jsonc
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "extends": ["ultracite/biome/core", "ultracite/biome/react"],
   "files": {
-    "includes": ["!src/components/ui"]
+    "includes": ["!src/components/ui", "!src/api/index.types.ts"]
   },
   "linter": {
     "rules": {
