feat: implement embedding and vector search pipeline with source management
- Add embedding service using Ollama for text embeddings
- Implement vector database repository for storage and similarity search
- Add web scraper service for source content extraction
- Implement document chunking service for efficient processing
- Add worker queue system for async embedding tasks
- Create source management handlers and repositories
- Add chat model support with message history tracking
- Implement vector-based semantic search functionality
- Refactor dashboard with bot management and source configuration
- Add UI components for conversations and suggestions
- Update dependencies and configuration for embedding support

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ PORT=8080
 DATABASE_PATH=./data/dev.db
 JWT_SECRET=your-super-secret-key-change-this-in-production
 ENVIRONMENT=development
+OpenAIAPIKey=api_key
+EmbeddingModel=text-embedding-3-small
+EmbeddingDimension=1536
+OPENAI_CHAT_MODEL=gpt-5-mini
+CHAT_TEMPERATURE=0.7
+MAX_CONTEXT_CHUNKS=5
