--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.4.0",
+    "use-stick-to-bottom": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
