feat: Add chat service, document extraction, and storage integration
- Implement chat handler and service for bot conversations
- Add PDF and Excel extraction capabilities with tests
- Integrate MinIO storage service for file management
- Add chat message component and UI route for bot conversations
- Update worker to handle document processing tasks
- Add Docker Compose configuration for development environment
- Update dependencies and configuration files

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,21 @@ PORT=8080
 DATABASE_PATH=./data/dev.db
 JWT_SECRET=your-super-secret-key-change-this-in-production
 ENVIRONMENT=development
-OpenAIAPIKey=api_key
+
+# OpenAI Configuration
+OpenAIAPIKey=your-openai-api-key-here
 EmbeddingModel=text-embedding-3-small
 EmbeddingDimension=1536
-OPENAI_CHAT_MODEL=gpt-5-mini
+OPENAI_CHAT_MODEL=gpt-4o-mini
 CHAT_TEMPERATURE=0.7
 MAX_CONTEXT_CHUNKS=5
+
+# MinIO Configuration
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=texly-uploads
+MINIO_USE_SSL=false
+
+# Upload Configuration
+MAX_UPLOAD_SIZE_MB=100
