--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,10 @@
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
+    "@streamdown/cjk": "^1.0.1",
+    "@streamdown/code": "^1.0.1",
+    "@streamdown/math": "^1.0.1",
+    "@streamdown/mermaid": "^1.0.1",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.9.2",
     "@tanstack/react-form-devtools": "^0.2.12",
@@ -26,6 +30,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "ai": "^6.0.62",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -38,6 +43,7 @@
     "recharts": "^3.7.0",
     "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.4.0",
