refactor: reorganize bot chat routes and add source management with Docker support
- Move chat handler from flat route to nested structure (/chat.tsx)
- Add comprehensive source management components (file upload, text source, URL source forms)
- Reorganize bot configuration page structure
- Add new UI components: progress, table, tabs, kibo-ui dropzone/status
- Update backend services for improved chat and vector search functionality
- Add Docker and docker-compose configuration for containerized deployment
- Update Go dependencies and internal models for document chunk handling
- Enhance conversation and suggestion components with new UI patterns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "cSpell.words": [
+    "adduser",
     "AIAPI",
+    "appuser",
+    "coverprofile",
     "Deleter",
+    "extldflags",
     "godotenv",
     "gonic",
     "gorm",
@@ -10,7 +14,10 @@
     "hugeicons",
     "joho",
     "labstack",
+    "ldflags",
     "minioadmin",
+    "netgo",
+    "osusergo",
     "requets",
     "savorysspace",
     "Signup",
@@ -18,6 +25,7 @@
     "stretchr",
     "testsecret",
     "texly",
+    "tzdata",
     "ultracite",
     "wrongpassword",
     "wrongsecret"
