--- a/ui/package.json
+++ b/ui/package.json
@@ -34,12 +34,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.563.0",
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.4.0",
     "recharts": "^3.7.0",
     "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
