Update project configuration and documentation
- Enhance README with comprehensive project information
- Update Docker and docker-compose configuration for better compatibility
- Improve VS Code settings and environment configuration
- Refactor Makefile targets for clarity
- Remove outdated issues tracking file
- Update environment example file

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ CHAT_TEMPERATURE=1.0
 MAX_CONTEXT_CHUNKS=5
 
 # MinIO Configuration
-MINIO_ENDPOINT=localhost:9000
+MINIO_ENDPOINT=storage:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=texly-uploads
