--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "adduser",
     "AIAPI",
     "appuser",
+    "CFLAGS",
     "coverprofile",
     "Deleter",
     "extldflags",
@@ -14,7 +15,10 @@
     "hugeicons",
     "joho",
     "labstack",
+    "LARGEFILE",
     "ldflags",
+    "libc",
+    "libsqlite",
     "minioadmin",
     "netgo",
     "osusergo",
@@ -27,6 +31,7 @@
     "texly",
     "tzdata",
     "ultracite",
+    "vite",
     "wrongpassword",
     "wrongsecret"
   ],
