--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   # Texly.Chat Application
-  app:
+  server:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: texly-app
+    container_name: texly-server
     env_file:
       - .env.prd
     ports:
@@ -22,7 +22,7 @@ services:
       - CHAT_TEMPERATURE=${CHAT_TEMPERATURE:-1.0}
       - MAX_CONTEXT_CHUNKS=${MAX_CONTEXT_CHUNKS:-5}
       # MinIO Configuration
-      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ENDPOINT=storage:9000
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
       - MINIO_BUCKET=texly-uploads
@@ -30,11 +30,11 @@ services:
       # Upload Configuration
       - MAX_UPLOAD_SIZE_MB=${MAX_UPLOAD_SIZE_MB:-100}
     volumes:
-      - app-data:/app/data
+      - server-data:/app/data
     depends_on:
-      minio:
+      storage:
         condition: service_healthy
-      minio-init:
+      storage-init:
         condition: service_completed_successfully
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
@@ -43,12 +43,12 @@ services:
       retries: 3
       start_period: 40s
     networks:
-      - texly-network
+      - texly-internal
     restart: unless-stopped
 
-  minio:
+  storage:
     image: minio/minio:latest
-    container_name: texly-minio
+    container_name: texly-storage
     ports:
       - "9000:9000"  # API
       - "9001:9001"  # Console
@@ -57,25 +57,25 @@ services:
       - MINIO_ROOT_PASSWORD=minioadmin
     command: server /data --console-address ":9001"
     volumes:
-      - minio-data:/data
+      - storage-data:/data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
       retries: 3
     networks:
-      - texly-network
+      - texly-internal
 
   # MinIO bucket initialization - runs once to create bucket
-  minio-init:
+  storage-init:
     image: minio/mc:latest
-    container_name: texly-minio-init
+    container_name: texly-storage-init
     depends_on:
-      minio:
+      storage:
         condition: service_healthy
     entrypoint: >
       /bin/sh -c "
-      mc alias set texly http://minio:9000 minioadmin minioadmin;
+      mc alias set texly http://storage:9000 minioadmin minioadmin;
       if mc ls texly/texly-uploads > /dev/null 2>&1; then
         echo 'Bucket texly-uploads already exists';
       else
@@ -87,15 +87,15 @@ services:
       exit 0;
       "
     networks:
-      - texly-network
+      - texly-internal
 
 volumes:
-  app-data:
+  server-data:
     driver: local
-  minio-data:
+  storage-data:
     driver: local
 
 networks:
-  texly-network:
+  texly-internal:
     driver: bridge
 
