--- a/ui/biome.jsonc
+++ b/ui/biome.jsonc
@@ -7,7 +7,8 @@
   "linter": {
     "rules": {
       "style": {
-        "useBlockStatements": "off"
+        "useBlockStatements": "off",
+        "useFilenamingConvention": "off"
       }
     }
   }
