--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,38 @@
+# ==========================================
+# Texly.Chat Environment Configuration
+# ==========================================
+# Copy this file to .env.local for local development
+# or .env.prd for production.
+#
+# REQUIRED VARIABLES are marked as [REQUIRED]
+# ==========================================
+
 PORT=8080
-DATABASE_PATH=./data/dev.db
+
+# Database Configuration [REQUIRED]
+# Format: postgres://user:password@host:port/dbname?sslmode=disable
+DATABASE_URL=postgres://texly:texly_dev@localhost:5432/texly?sslmode=disable
+
+# Redis Configuration [REQUIRED]
+# Format: redis://:password@host:port/db
+REDIS_URL=redis://localhost:6379/0
+
+# Security [REQUIRED]
+# Run `openssl rand -hex 32` to generate
 JWT_SECRET=your-super-secret-key-change-this-in-production
+
 ENVIRONMENT=development
 
-# OpenAI Configuration
+# OpenAI Configuration [REQUIRED]
 OPENAI_API_KEY=your-openai-api-key-here
 EMBEDDING_MODEL=text-embedding-3-small
 EMBEDDING_DIMENSION=1536
 OPENAI_CHAT_MODEL=gpt-4o-mini
-CHAT_TEMPERATURE=1.0
+CHAT_TEMPERATURE=0.7
 MAX_CONTEXT_CHUNKS=5
 
-# MinIO Configuration
-MINIO_ENDPOINT=storage:9000
+# MinIO Configuration [REQUIRED for File Uploads]
+MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=texly-uploads
