--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "coverprofile",
     "Deleter",
     "extldflags",
+    "extname",
     "godotenv",
     "gonic",
     "gorm",
@@ -22,10 +23,12 @@
     "minioadmin",
     "netgo",
     "osusergo",
+    "pgvector",
     "requets",
     "savorysspace",
     "Signup",
     "souravsspace",
+    "sslmode",
     "stretchr",
     "testsecret",
     "texly",
