--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,10 @@ MINIO_USE_SSL=false
 
 # Upload Configuration
 MAX_UPLOAD_SIZE_MB=100
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URL=http://localhost:8080/api/auth/google/callback
+
+FRONTEND_URL=http://localhost:5173
