Complete Phase 6: Google OAuth implementation with UI enhancements
- Implement Google OAuth 2.0 authentication flow with state validation
- Add settings page with profile and connected accounts management
- Create reusable Header component with user dropdown and logout
- Fix OAuth callback route naming and token handling
- Add user avatar and auth_provider fields to User model
- Update Google login/signup links to use absolute URLs
- Fix JWT claims from 'sub' to 'user_id' for consistency
- Add proxy bypass for OAuth Google redirect routes
- Update project name to 'texly-ai' in package.json
- Mark Phase 6 as completed in task documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,16 @@
   "cSpell.words": [
     "adduser",
     "AIAPI",
+    "alicebob",
     "appuser",
     "CFLAGS",
+    "Chatbots",
     "coverprofile",
     "Deleter",
     "extldflags",
     "extname",
+    "Fcallback",
+    "Flocalhost",
     "godotenv",
     "gonic",
     "gorm",
@@ -21,6 +25,7 @@
     "libc",
     "libsqlite",
     "minioadmin",
+    "Miniredis",
     "netgo",
     "osusergo",
     "pgvector",
