feat: add Redis infrastructure and health check endpoints
- Add Redis client singleton with connection pooling (internal/db/redis.go)
- Implement cache service with configurable TTL and key management (internal/services/cache)
- Add health check handler for system diagnostics (internal/handlers/health)
- Update repositories with Redis caching layer for bot, source, and user queries
- Enhance chat handler with Redis-backed streaming
- Upgrade Makefile with Redis configuration options
- Remove root-level package.json/package-lock.json (moved to ui and widget)
- Remove .mcp.json as it's no longer needed
- Update environment configuration and documentation
- Improve test coverage for new Redis integration

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ DATABASE_URL=postgres://texly:texly_dev@localhost:5432/texly?sslmode=disable
 # Redis Configuration [REQUIRED]
 # Format: redis://:password@host:port/db
 REDIS_URL=redis://localhost:6379/0
+REDIS_MAX_CONNS=50
+REDIS_MIN_IDLE_CONNS=10
 
 # Security [REQUIRED]
 # Run `openssl rand -hex 32` to generate
