feat: add billing system with usage tracking and entitlement middleware
- Add billing services (usage tracking, credits, Polar integration)
- Implement entitlement middleware to enforce resource limits
- Reorganize middleware structure (CORS, rate limiting into separate packages)
- Add daily billing worker for automated billing cycle management
- Enhance worker with usage tracking for bot operations
- Add SetBaseURL method to chat service for testing flexibility
- Remove unused node_modules dependencies
- Update configuration with billing-related settings

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,11 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URL=http://localhost:8080/api/auth/google/callback
 
 FRONTEND_URL=http://localhost:3000
+
+# Polar Payment Configuration
+# Get credentials from https://polar.sh/settings
+POLAR_ACCESS_TOKEN=your-polar-access-token
+POLAR_WEBHOOK_SECRET=your-polar-webhook-secret
+POLAR_ORGANIZATION_ID=your-polar-org-id
+POLAR_PRO_PRODUCT_ID=your-polar-pro-product-id
+POLAR_SERVER_URL=https://api.polar.sh
