--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,16 @@
     "appuser",
     "CFLAGS",
     "Chatbots",
+    "chunker",
     "coverprofile",
     "Deleter",
+    "Desucts",
     "extldflags",
     "extname",
     "Fcallback",
     "Flocalhost",
+    "FLUSHALL",
+    "gocolly",
     "godotenv",
     "gonic",
     "gorm",
@@ -39,6 +43,7 @@
     "texly",
     "tzdata",
     "ultracite",
+    "unbilled",
     "vite",
     "wrongpassword",
     "wrongsecret"
