feat: integrate Polar payment SDK and implement billing handlers with checkout and webhook support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
     "netgo",
     "osusergo",
     "pgvector",
+    "polargo",
+    "polarsource",
     "requets",
     "savorysspace",
     "Signup",
