--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,9 +1,5 @@
 {
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "vite.config.js"
-  ],
+  "include": ["**/*.ts", "**/*.tsx", "vite.config.js"],
 
   "compilerOptions": {
     "target": "ES2022",
